src/objects/BMCServiceDesk__Model__c.object
<CustomObject>
    <description>Models are used to standardize the creation of configuration items (CIs) and assets and associated field values including model name and manufacturer.  Without model, users have no restrictions when entering key values including the model name and manufacturer.  This applies to imports too.  As a result, data is more likely to be inconsistent making it more difficult to locate key information and reducing the value of the data and analysis.</description>
    <fields>
        <fullName>BMCServiceDesk__CMDB_Class_Name__c</fullName>
        <formula>BMCServiceDesk__FKCMDB_Class__r.BMCServiceDesk__Class__c</formula>
        <label>CMDB Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <description>Stores details about the model</description>
        <inlineHelpText>Specify detailed information about the model.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCMDB_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the CMDB class on which the model is created</description>
        <inlineHelpText>Select the CMDB class for which you want to create a model.</inlineHelpText>
        <label>CMDB Class</label>
        <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
        <relationshipLabel>Models</relationshipLabel>
        <relationshipName>Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKModel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Normalized Model</label>
        <referenceTo>BMCServiceDesk__Model__c</referenceTo>
        <relationshipLabel>Master Models</relationshipLabel>
        <relationshipName>Master_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the model is active or inactive in CMDB</description>
        <inlineHelpText>Select this field if the model is no longer valid. Inactive models can no longer be applied to CMDB instances.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Manufacturer__c</fullName>
        <description>Stores the manufacturer name of the model</description>
        <inlineHelpText>Specify the manufacturer of the model. This value is automatically mapped to the Manufacturer Name attribute of the configuration item or asset.</inlineHelpText>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Normalized_With_Model__c</fullName>
        <formula>BMCServiceDesk__FKModel__r.Name</formula>
        <label>Normalized With Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Part_Number__c</fullName>
        <inlineHelpText>Specify the model number, which is a unique identifier of the model.</inlineHelpText>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Model</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__Manufacturer__c</columns>
        <columns>BMCServiceDesk__CMDB_Class_Name__c</columns>
        <columns>BMCServiceDesk__Inactive__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>BMCServiceDesk__Normalized_With_Model__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>